--- a/index.html
+++ b/index.html
@@ -4,7 +4,17 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="color-scheme" content="dark light">
     <title>Сложно сосредоточиться</title>
+    <link rel="stylesheet" href="./fonts/fonts.css" />
+    <link rel="icon" href="./images/favicon.ico" sizes="any" />
+    <link rel="icon" href="./images/favicon.svg" type="image/svg+xml" />
+    <link rel="apple-touch-icon" href="./images/mobile-icon.png" />
+    <link rel="stylesheet" href="./styles/globals.css" />
+    <link rel="stylesheet" href="./styles/variables.css" />
+    <link rel="stylesheet" href="./styles/style.css" />
+    <link rel="stylesheet" href="./styles/dark.css" />
+    <link rel="stylesheet" href="./styles/light.css" />
   </head>
   <body class="page">
     <header class="header decorated-zone">
@@ -34,7 +44,194 @@
           </li>
         </ul>
       </nav>
+      <div
+        class="header__decorations decorations-accent"
+        aria-hidden="true"
+      ></div>
+      <h1 class="header__title accent-title-decor">no focus</h1>
+      <h2 class="header__text title-decor">
+        Что делать, когда не можешь делать ничего<br />Или почему нам так сложно
+        сконцентрироваться, особенно когда очень надо
+      </h2>
     </header>
+    <main class="content">
+      <section class="content__why">
+        <article class="content__why-text">
+          <h3 class="content__title title-decor">
+            Почему сосредоточиться так сложно
+          </h3>
+
+          <ul class="content__why-card">
+            <li class="content__why-card-list multitasking">
+              <h2 class="content__why-title title-decor">Многозадачность</h2>
+              <p class="content__text title-decor">
+                Особенно сложно сосредоточиться, когда задач много и все они —
+                важные. Где же легендарная многозадачность, когда она так нужна
+                вам (и всем нанимающим менеджерам этого мира)? А дело в том, что
+                её просто не существует. Исследователи <a href="https://dana.org/article/multicosts-of-multitasking/" target="_blank" class="accent_link">выяснили</a>, что мозгу
+                тяжело концентрироваться даже на двух делах одновременно. А
+                когда в поле внимания попадает несколько важных задач, организм
+                паникует и выделяет кортизол и адреналин — «гормоны стресса».
+                Из-за этого мы работаем невнимательно: ошибаемся и быстро
+                устаём.
+              </p>
+            </li>
+
+            <li class="content__why-card-list dopamine">
+              <h2 class="content__why-title title-decor">Дофамин</h2>
+              <p class="content__text title-decor">
+                С гормонами стресса всё понятно, но дальше — ещё интереснее. В
+                нашей невозможности сосредоточиться замешана и полная
+                противоположность стрессу — дофамин. Это вещество участвует в
+                системе вознаграждения мозга. Причём тут он? Мы часто
+                отвлекаемся от важной задачи на что-то более «приятное» для
+                мозгов. Например, смотрим лайки в соцсетях. В это время и
+                выделяется дофамин — и мы чувствуем удовольствие. Получается
+                замкнутый круг: чем больше отвлекаешься, тем больше удовольствия
+                получаешь.
+              </p>
+            </li>
+          </ul>
+        </article>
+      </section>
+      <section class="content__what">
+        <article class="content__what-card-text">
+          <h3 class="content__title title-decor">
+            Что снижает концентрацию внимания?
+          </h3>
+
+          <ul class="content__what-card">
+            <li class="content__what-card-list">
+              <h2 class="content__what-title title-decor">Многозадачность</h2>
+              <p class="content__text title-decor">
+                Как концентрация может снижаться из-за… концентрации? Любая
+                стрессовая ситуация (и резко меняющийся мир в целом) заставляет
+                наш мозг постоянно «сканировать» окружающую среду на предмет
+                опасности. Например, читать новости вместо работы. Но быть
+                собранными всё время — невозможно. Концентрация — мышца, и она
+                может не выдержать, если не давать ей отдохнуть.
+              </p>
+            </li>
+
+            <li class="content__what-card-list">
+              <h2 class="content__what-title title-decor">Еда</h2>
+              <p class="content__text title-decor">
+                «Быстрые углеводы» — сахар, белый хлеб, сладости — молниеносно
+                доставляют в мозг энергию и помогают ему лучше работать. Но
+                уходит эта энергия также быстро, как и приходит. А мы в
+                результате попадаем на «углеводные качели»: как только действие
+                «быстрых углеводов» заканчивается, мы чувствуем усталость и
+                сонливость. И хотим ещё больше быстрых углеводов.
+              </p>
+            </li>
+            <li class="content__what-card-list">
+              <h2 class="content__what-title title-decor">Гаджеты</h2>
+              <p class="content__text title-decor">
+                Да-да, это та самая ситуация, когда на экране ноутбука — код, в
+                наушниках — подкаст, а на компьютере фоном — ещё и видео с
+                забавными утятами. В результате мозг пытается переключиться с
+                одной задачи на другую — и просто не может. А чтобы вернуться к
+                состоянию полной концентрации, человеку в среднем нужно 20
+                минут. Вот и получается, что чем больше времени мы проводим в
+                гаджетах, тем больше времени затем нужно, чтобы вернуться к
+                работе.
+              </p>
+            </li>
+          </ul>
+        </article>
+      </section>
+      <section class="content__how">
+        <article class="content__how-card-text">
+          <h3 class="content__title title-decor">
+            Как концентрироваться лучше, чем золотая рыбка (то есть дольше трёх
+            секунд)
+          </h3>
+          <h2 class="content__how-title title-decor title-decor-selection">
+            5 простых (на самом деле не очень) советов
+          </h2>
+          <ul class="content__how-card">
+            <li class="content__how-card-list">
+              <h2 class="content__how-title title-decor">
+                Представьте небо и облака
+              </h2>
+              <p class="content__text title-decor">
+                Или листья в ручье. Тут дело в лёгкой медитации, которая
+                помогает успокоиться. Ведь часто именно тревожные мысли о
+                сложных задачах как раз и мешают эти сложные задачи делать. В
+                такие моменты можно закрыть глаза и представить, что чистое небо
+                — это вы, а облака — тревожные мысли. И сколько бы их ни было —
+                ясное небо всегда будет где-то там, за тучами, и никуда не
+                денется. Это упражнение поможет вернуться в настоящий момент, а
+                не волноваться о потенциальных проблемах из будущего.
+              </p>
+            </li>
+
+            <li class="content__how-card-list">
+              <h2 class="content__how-title title-decor">Включите музыку</h2>
+              <p class="content__text title-decor">
+                Но не любую, и не любимую. Любимая может быть связана с сильными
+                положительными эмоциями, которые тоже очень сильно отвлекают.
+                Подойдёт тихая, спокойная, умеренно-ритмичная. Можно вообще
+                попробовать включить плейлист в «белым шумом» или нейромузыкой.
+              </p>
+            </li>
+            <li class="content__how-card-list">
+              <h2 class="content__how-title title-decor">Прогуляйтесь</h2>
+              <p class="content__text title-decor">
+                Или даже пробегитесь. Лучше найти парк или лес: один эксперимент <a href="https://www.figma.com/exit?url=https%3A%2F%2Fwww.sciencedirect.com%2Fscience%2Farticle%2Fabs%2Fpii%2FS0272494415000328" target="_blank" class="accent_link">
+                показал</a>, что созерцание природы повышает концентрацию, в то
+                время как после просмотра городских пейзажей она наоборот
+                понижается. Можно совместить прогулку с физическими упражнениями
+                или бегом — так в мозг поступит ещё больше кислорода и он будет
+                лучше работать. Но и простая двадцатиминутная прогулка — тоже
+                отличный вариант.
+              </p>
+            </li>
+            <li class="content__how-card-list">
+              <h2 class="content__how-title title-decor">Хорошо ешьте</h2>
+              <p class="content__text title-decor">
+                Мы — не ваша бабушка, но это правда важно. Выбирайте продукты,
+                которые препятствуют резким скачкам сахара в крови. Например, с
+                высоким содержанием клетчатки: овощи, ягоды, бобовые (нут,
+                чечевица, фасоль), коричневый рис, хлеб из цельнозерновой
+                пшеницы.
+              </p>
+            </li>
+            <li class="content__how-card-list">
+              <h2 class="content__how-title title-decor">Читайте</h2>
+              <p class="content__text title-decor">
+                Настоящие бумажные книги. Это правда помогает с концентрацией:
+                чтобы прочитать пост в соцсети, достаточно нескольких минут или
+                даже секунд. А вот интересная книга способна затянуть и на
+                несколько часов и круто тренирует направленное внимание.
+              </p>
+            </li>
+          </ul>
+        </article>
+      </section>
+      <section class="gallery">
+        <h2 class="gallery-title title-decor">А можно в картинках?</h2>
+        <img src="./images/sunset.png" alt="закат солнца, горы и море"
+        class="gallery__picture sunset-img"
+        loading="lazy">
+        <img src="./images/ice-cream.png" alt="мороженое в желтой тарелке"
+        class="gallery__picture ice-cream-img"
+        loading="lazy">
+        <img src="./images/tape.png" alt="музыкальная касета"
+        class="gallery__picture tape-img"
+        loading="lazy">
+        <img src="./images/books.png" alt="книги стопкой с чашкой"
+        class="gallery__picture books-img"
+        loading="lazy">
+        <img src="./images/street.png" alt="улица"
+        class="gallery__picture street-img"
+        loading="lazy">
+      </section>
+    </main>
+<footer class="footer">
+<div class="footer__title accent-title-decor">focus</div>
+
+</footer>
     <script src="./scripts/script.js"></script>
   </body>
 </html>
