--- a/index.html
+++ b/index.html
@@ -49,21 +49,21 @@
         aria-hidden="true"
       ></div>
       <h1 class="header__title accent-title-decor">no focus</h1>
-      <h2 class="header__text title-decor">
+      <p class="header__text title-decor">
         Что делать, когда не можешь делать ничего<br />Или почему нам так сложно
         сконцентрироваться, особенно когда очень надо
-      </h2>
+      </p>
     </header>
     <main class="content">
       <section class="content__why">
         <article class="content__why-text">
-          <h3 class="content__title title-decor">
+          <h2 class="content__title title-decor">
             Почему сосредоточиться так сложно
-          </h3>
+          </h2>
 
           <ul class="content__why-card">
             <li class="content__why-card-list multitasking">
-              <h2 class="content__why-title title-decor">Многозадачность</h2>
+              <h3 class="content__why-title title-decor">Многозадачность</h3>
               <p class="content__text title-decor">
                 Особенно сложно сосредоточиться, когда задач много и все они —
                 важные. Где же легендарная многозадачность, когда она так нужна
@@ -78,7 +78,7 @@
             </li>
 
             <li class="content__why-card-list dopamine">
-              <h2 class="content__why-title title-decor">Дофамин</h2>
+              <h3 class="content__why-title title-decor">Дофамин</h3>
               <p class="content__text title-decor">
                 С гормонами стресса всё понятно, но дальше — ещё интереснее. В
                 нашей невозможности сосредоточиться замешана и полная
@@ -96,13 +96,13 @@
       </section>
       <section class="content__what">
         <article class="content__what-card-text">
-          <h3 class="content__title title-decor">
+          <h2 class="content__title title-decor">
             Что снижает концентрацию внимания?
-          </h3>
+          </h2>
 
           <ul class="content__what-card">
             <li class="content__what-card-list">
-              <h2 class="content__what-title title-decor">Многозадачность</h2>
+              <h3 class="content__what-title title-decor">Многозадачность</h3>
               <p class="content__text title-decor">
                 Как концентрация может снижаться из-за… концентрации? Любая
                 стрессовая ситуация (и резко меняющийся мир в целом) заставляет
@@ -114,7 +114,7 @@
             </li>
 
             <li class="content__what-card-list">
-              <h2 class="content__what-title title-decor">Еда</h2>
+              <h3 class="content__what-title title-decor">Еда</h3>
               <p class="content__text title-decor">
                 «Быстрые углеводы» — сахар, белый хлеб, сладости — молниеносно
                 доставляют в мозг энергию и помогают ему лучше работать. Но
@@ -125,7 +125,7 @@
               </p>
             </li>
             <li class="content__what-card-list">
-              <h2 class="content__what-title title-decor">Гаджеты</h2>
+              <h3 class="content__what-title title-decor">Гаджеты</h3>
               <p class="content__text title-decor">
                 Да-да, это та самая ситуация, когда на экране ноутбука — код, в
                 наушниках — подкаст, а на компьютере фоном — ещё и видео с
@@ -142,18 +142,18 @@
       </section>
       <section class="content__how">
         <article class="content__how-card-text">
-          <h3 class="content__title title-decor">
+          <h2 class="content__title title-decor">
             Как концентрироваться лучше, чем золотая рыбка (то есть дольше трёх
             секунд)
-          </h3>
-          <h2 class="content__how-title title-decor title-decor-selection">
-            5 простых (на самом деле не очень) советов
           </h2>
+          <h3 class="content__how-title title-decor title-decor-selection">
+            5 простых (на самом деле не очень) советов
+          </h3>
           <ul class="content__how-card">
             <li class="content__how-card-list">
-              <h2 class="content__how-title title-decor">
+              <h4 class="content__how-title title-decor">
                 Представьте небо и облака
-              </h2>
+              </h4>
               <p class="content__text title-decor">
                 Или листья в ручье. Тут дело в лёгкой медитации, которая
                 помогает успокоиться. Ведь часто именно тревожные мысли о
@@ -167,7 +167,7 @@
             </li>
 
             <li class="content__how-card-list">
-              <h2 class="content__how-title title-decor">Включите музыку</h2>
+              <h4 class="content__how-title title-decor">Включите музыку</h4>
               <p class="content__text title-decor">
                 Но не любую, и не любимую. Любимая может быть связана с сильными
                 положительными эмоциями, которые тоже очень сильно отвлекают.
@@ -176,7 +176,7 @@
               </p>
             </li>
             <li class="content__how-card-list">
-              <h2 class="content__how-title title-decor">Прогуляйтесь</h2>
+              <h4 class="content__how-title title-decor">Прогуляйтесь</h4>
               <p class="content__text title-decor">
                 Или даже пробегитесь. Лучше найти парк или лес: один эксперимент <a href="https://www.figma.com/exit?url=https%3A%2F%2Fwww.sciencedirect.com%2Fscience%2Farticle%2Fabs%2Fpii%2FS0272494415000328" target="_blank" class="accent_link">
                 показал</a>, что созерцание природы повышает концентрацию, в то
@@ -188,7 +188,7 @@
               </p>
             </li>
             <li class="content__how-card-list">
-              <h2 class="content__how-title title-decor">Хорошо ешьте</h2>
+              <h4 class="content__how-title title-decor">Хорошо ешьте</h4>
               <p class="content__text title-decor">
                 Мы — не ваша бабушка, но это правда важно. Выбирайте продукты,
                 которые препятствуют резким скачкам сахара в крови. Например, с
@@ -198,7 +198,7 @@
               </p>
             </li>
             <li class="content__how-card-list">
-              <h2 class="content__how-title title-decor">Читайте</h2>
+              <h4 class="content__how-title title-decor">Читайте</h4>
               <p class="content__text title-decor">
                 Настоящие бумажные книги. Это правда помогает с концентрацией:
                 чтобы прочитать пост в соцсети, достаточно нескольких минут или
@@ -229,7 +229,7 @@
       </section>
     </main>
 <footer class="footer">
-<div class="footer__title accent-title-decor">focus</div>
+<h2 class="footer__title accent-title-decor">focus</h2>
 
 </footer>
     <script src="./scripts/script.js"></script>
