--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta name="color-scheme" content="dark light">
+    <meta name="color-scheme" content="dark light" />
     <title>Сложно сосредоточиться</title>
     <link rel="stylesheet" href="./fonts/fonts.css" />
     <link rel="icon" href="./images/favicon.ico" sizes="any" />
@@ -68,12 +68,17 @@
                 Особенно сложно сосредоточиться, когда задач много и все они —
                 важные. Где же легендарная многозадачность, когда она так нужна
                 вам (и всем нанимающим менеджерам этого мира)? А дело в том, что
-                её просто не существует. Исследователи <a href="https://dana.org/article/multicosts-of-multitasking/" target="_blank" class="accent_link">выяснили</a>, что мозгу
-                тяжело концентрироваться даже на двух делах одновременно. А
-                когда в поле внимания попадает несколько важных задач, организм
-                паникует и выделяет кортизол и адреналин — «гормоны стресса».
-                Из-за этого мы работаем невнимательно: ошибаемся и быстро
-                устаём.
+                её просто не существует. Исследователи
+                <a
+                  href="https://dana.org/article/multicosts-of-multitasking/"
+                  target="_blank"
+                  class="accent_link"
+                  >выяснили</a
+                >, что мозгу тяжело концентрироваться даже на двух делах
+                одновременно. А когда в поле внимания попадает несколько важных
+                задач, организм паникует и выделяет кортизол и адреналин —
+                «гормоны стресса». Из-за этого мы работаем невнимательно:
+                ошибаемся и быстро устаём.
               </p>
             </li>
 
@@ -178,13 +183,19 @@
             <li class="content__how-card-list">
               <h4 class="content__how-title title-decor">Прогуляйтесь</h4>
               <p class="content__text title-decor">
-                Или даже пробегитесь. Лучше найти парк или лес: один эксперимент <a href="https://www.figma.com/exit?url=https%3A%2F%2Fwww.sciencedirect.com%2Fscience%2Farticle%2Fabs%2Fpii%2FS0272494415000328" target="_blank" class="accent_link">
-                показал</a>, что созерцание природы повышает концентрацию, в то
-                время как после просмотра городских пейзажей она наоборот
-                понижается. Можно совместить прогулку с физическими упражнениями
-                или бегом — так в мозг поступит ещё больше кислорода и он будет
-                лучше работать. Но и простая двадцатиминутная прогулка — тоже
-                отличный вариант.
+                Или даже пробегитесь. Лучше найти парк или лес: один эксперимент
+                <a
+                  href="https://www.figma.com/exit?url=https%3A%2F%2Fwww.sciencedirect.com%2Fscience%2Farticle%2Fabs%2Fpii%2FS0272494415000328"
+                  target="_blank"
+                  class="accent_link"
+                >
+                  показал</a
+                >, что созерцание природы повышает концентрацию, в то время как
+                после просмотра городских пейзажей она наоборот понижается.
+                Можно совместить прогулку с физическими упражнениями или бегом —
+                так в мозг поступит ещё больше кислорода и он будет лучше
+                работать. Но и простая двадцатиминутная прогулка — тоже отличный
+                вариант.
               </p>
             </li>
             <li class="content__how-card-list">
@@ -211,27 +222,41 @@
       </section>
       <section class="gallery">
         <h2 class="gallery-title title-decor">А можно в картинках?</h2>
-        <img src="./images/sunset.png" alt="закат солнца, горы и море"
-        class="gallery__picture sunset-img"
-        loading="lazy">
-        <img src="./images/ice-cream.png" alt="мороженое в желтой тарелке"
-        class="gallery__picture ice-cream-img"
-        loading="lazy">
-        <img src="./images/tape.png" alt="музыкальная касета"
-        class="gallery__picture tape-img"
-        loading="lazy">
-        <img src="./images/books.png" alt="книги стопкой с чашкой"
-        class="gallery__picture books-img"
-        loading="lazy">
-        <img src="./images/street.png" alt="улица"
-        class="gallery__picture street-img"
-        loading="lazy">
+        <img
+          src="./images/sunset.png"
+          alt="закат солнца, горы и море"
+          class="gallery__picture sunset-img"
+          loading="lazy"
+        />
+        <img
+          src="./images/ice-cream.png"
+          alt="мороженое в желтой тарелке"
+          class="gallery__picture ice-cream-img"
+          loading="lazy"
+        />
+        <img
+          src="./images/tape.png"
+          alt="музыкальная касета"
+          class="gallery__picture tape-img"
+          loading="lazy"
+        />
+        <img
+          src="./images/books.png"
+          alt="книги стопкой с чашкой"
+          class="gallery__picture books-img"
+          loading="lazy"
+        />
+        <img
+          src="./images/street.png"
+          alt="улица"
+          class="gallery__picture street-img"
+          loading="lazy"
+        />
       </section>
     </main>
-<footer class="footer">
-<h2 class="footer__title accent-title-decor">focus</h2>
-
-</footer>
+    <footer class="footer">
+      <h2 class="footer__title accent-title-decor">focus</h2>
+    </footer>
     <script src="./scripts/script.js"></script>
   </body>
 </html>
