корректировка от 24.12.2023 git push

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <link rel="stylesheet" href="./styles/light.css" />
   </head>
   <body class="page">
-    <header class="header decorated-zone">
+    <header class="header decorated-zone decorations">
       <nav class="header__theme-menu">
         <ul class="header__theme-menu-list">
           <li class="header__theme-menu-item">
@@ -45,7 +45,7 @@
         </ul>
       </nav>
       <div
-        class="header__decorations decorations-accent"
+        class="header__decorations decorations-accent "
         aria-hidden="true"
       ></div>
       <h1 class="header__title accent-title-decor">no focus</h1>
@@ -254,9 +254,10 @@
         />
       </section>
     </main>
-    <footer class="footer">
+    <footer class="footer decorations">
       <h2 class="footer__title accent-title-decor">focus</h2>
     </footer>
     <script src="./scripts/script.js"></script>
   </body>
 </html>
+
